@@ -7,6 +7,7 @@ import com.intellij.debugger.JavaDebuggerBundle;
 import com.intellij.debugger.actions.ThreadDumpAction;
 import com.intellij.debugger.engine.DebugProcessImpl;
 import com.intellij.debugger.engine.DebuggerManagerThreadImpl;
+import com.intellij.debugger.impl.hotswap.JvmHotSwapListener;
 import com.intellij.debugger.jdi.ThreadReferenceProxyImpl;
 import com.intellij.debugger.jdi.VirtualMachineProxyImpl;
 import com.intellij.debugger.ui.breakpoints.BreakpointManager;
@@ -14,7 +15,6 @@ import com.intellij.debugger.ui.breakpoints.StackCapturingLineBreakpoint;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.threadDumpParser.ThreadState;
 import com.intellij.util.concurrency.Semaphore;
@@ -31,12 +31,13 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Range;
 
-import java.io.File;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.IntStream;
 
 class ReloadClassesWorker {
@@ -119,7 +120,7 @@ class ReloadClassesWorker {
     }
   }
 
-  public void reloadClasses(@NotNull Map<@NotNull String, @NotNull HotSwapFile> modifiedClasses) {
+  public void reloadClasses(@NotNull Map<@NotNull String, ? extends @NotNull HotSwapClassFile> modifiedClasses) {
     DebuggerManagerThreadImpl.assertIsManagerThread();
 
     if (modifiedClasses.isEmpty()) {
@@ -152,11 +153,14 @@ class ReloadClassesWorker {
         }));
     }
 
+    Set<String> classesToReload = Set.copyOf(modifiedClasses.keySet());
+    notifyBeforeHotSwap(classesToReload);
+    Set<String> reloadedClasses = Collections.emptySet();
     try {
       RedefineProcessor redefineProcessor = new RedefineProcessor(virtualMachineProxy);
 
       int processedEntriesCount = 0;
-      for (Map.Entry<@NotNull String, @NotNull HotSwapFile> entry : modifiedClasses.entrySet()) {
+      for (Map.Entry<@NotNull String, ? extends @NotNull HotSwapClassFile> entry : modifiedClasses.entrySet()) {
         // stop if the process is finished already
         if (debugProcess.isDetached() || debugProcess.isDetaching()) {
           break;
@@ -169,7 +173,7 @@ class ReloadClassesWorker {
         myProgress.setText(qualifiedName);
         myProgress.setFraction(processedEntriesCount / (double)modifiedClasses.size());
         try {
-          redefineProcessor.processClass(qualifiedName, entry.getValue().file);
+          redefineProcessor.processClass(qualifiedName, entry.getValue());
         }
         catch (IOException e) {
           reportProblem(qualifiedName, e);
@@ -200,11 +204,13 @@ class ReloadClassesWorker {
       }
 
       LOG.debug("classes reloaded");
+      reloadedClasses = Set.copyOf(redefineProcessor.myRedefinedClasses);
     }
     catch (Throwable e) {
       processException(e);
     }
 
+    notifyAfterHotSwap(classesToReload, reloadedClasses);
     debugProcess.onHotSwapFinished();
 
     final Semaphore waitSemaphore = new Semaphore();
@@ -246,6 +252,14 @@ class ReloadClassesWorker {
     }
   }
 
+  private void notifyBeforeHotSwap(@NotNull Set<String> classesToReload) {
+    JvmHotSwapListener.EP_NAME.forEachExtensionSafe(listener -> listener.beforeHotSwap(myDebuggerSession, classesToReload));
+  }
+
+  private void notifyAfterHotSwap(@NotNull Set<String> classesToReload, @NotNull Set<String> reloadedClasses) {
+    JvmHotSwapListener.EP_NAME.forEachExtensionSafe(listener -> listener.afterHotSwap(myDebuggerSession, classesToReload, reloadedClasses));
+  }
+
   private void reportProblem(String qualifiedName, @Nullable Exception ex) {
     String reason = ex != null ? ex.getLocalizedMessage() : null;
     if (reason == null || reason.isEmpty()) {
@@ -262,6 +276,7 @@ class ReloadClassesWorker {
     private static final int CLASSES_CHUNK_SIZE = 100;
     private final @NotNull VirtualMachineProxyImpl myVirtualMachineProxy;
     private final @NotNull Map<@NotNull ReferenceType, byte @NotNull []> myRedefineMap = new HashMap<>();
+    private final @NotNull Set<@NotNull String> myRedefinedClasses = new HashSet<>();
     private @Range(from = 0, to = Integer.MAX_VALUE) int myProcessedClassesCount;
     private @Range(from = 0, to = Integer.MAX_VALUE) int myPartiallyRedefinedClassesCount;
 
@@ -269,7 +284,7 @@ class ReloadClassesWorker {
       myVirtualMachineProxy = virtualMachineProxy;
     }
 
-    public void processClass(@NotNull String qualifiedName, @NotNull File file)
+    public void processClass(@NotNull String qualifiedName, @NotNull HotSwapClassFile file)
       throws IOException, LinkageError, UnsupportedOperationException {
 
       final List<ReferenceType> vmClasses = myVirtualMachineProxy.classesByName(qualifiedName);
@@ -277,9 +292,10 @@ class ReloadClassesWorker {
         return;
       }
 
-      final byte[] content = FileUtil.loadFileBytes(file);
+      final byte[] content = file.loadBytes();
       if (vmClasses.size() == 1) {
-        myRedefineMap.put(vmClasses.get(0), content);
+        ReferenceType vmClass = vmClasses.getFirst();
+        myRedefineMap.put(vmClass, content);
         if (myRedefineMap.size() >= CLASSES_CHUNK_SIZE) {
           processChunk();
         }
@@ -310,6 +326,7 @@ class ReloadClassesWorker {
       if (redefinedVersionsCount < vmClasses.size()) {
         myPartiallyRedefinedClassesCount++;
       }
+      myRedefinedClasses.add(qualifiedName);
       myProcessedClassesCount++;
     }
 
@@ -323,6 +340,9 @@ class ReloadClassesWorker {
       // reload this portion of classes and clear the map to free memory
       try {
         myVirtualMachineProxy.redefineClasses(myRedefineMap);
+        for (ReferenceType vmClass : myRedefineMap.keySet()) {
+          myRedefinedClasses.add(vmClass.name());
+        }
         myProcessedClassesCount += myRedefineMap.size();
       }
       finally {
