@@ -30,7 +30,6 @@ import com.intellij.lang.annotation.ExternalAnnotator;
 import com.intellij.lang.annotation.HighlightSeverity;
 import com.intellij.lang.annotation.ProblemGroup;
 import com.intellij.modcommand.ModCommandAction;
-import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.diagnostic.ReportingClassSubstitutor;
@@ -65,6 +64,9 @@ import com.intellij.psi.PsiDocumentManager;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiManager;
 import com.intellij.util.BitUtil;
+import com.intellij.util.concurrency.ThreadingAssertions;
+import com.intellij.util.concurrency.annotations.RequiresBackgroundThread;
+import com.intellij.util.concurrency.annotations.RequiresReadLock;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.xml.util.XmlStringUtil;
 import it.unimi.dsi.fastutil.longs.Long2ObjectMap;
@@ -108,6 +110,7 @@ import static com.intellij.openapi.util.NlsContexts.Tooltip;
 @ApiStatus.NonExtendable
 public class HighlightInfo implements Segment {
   private static final Logger LOG = Logger.getInstance(HighlightInfo.class);
+  public static final HighlightInfo[] EMPTY_ARRAY = new HighlightInfo[0];
   /**
    * Short name of the {@link com.intellij.codeInsight.daemon.impl.HighlightVisitorBasedInspection} tool, which needs to be treated differently from other inspections:
    * it doesn't have "disable" or "suppress" quickfixes
@@ -180,13 +183,13 @@ public class HighlightInfo implements Segment {
   private record OffsetStore(
     @Nullable RangeHighlighterEx highlighter,
     @Nullable("null means its fix range is the same as the range of #highlighter") RangeMarker fixMarker,
-    @NotNull @Unmodifiable List<IntentionActionDescriptor> intentionActionDescriptors,
-    @NotNull @Unmodifiable List<LazyFixDescription> lazyQuickFixes
+    @NotNull @Unmodifiable List<? extends IntentionActionDescriptor> intentionActionDescriptors,
+    @NotNull @Unmodifiable List<? extends LazyFixDescription> lazyQuickFixes
   ) {
-    @NotNull OffsetStore withLazyQuickFixes(@NotNull @Unmodifiable List<LazyFixDescription> newLazyQuickFixes) {
+    @NotNull OffsetStore withLazyQuickFixes(@NotNull @Unmodifiable List<? extends LazyFixDescription> newLazyQuickFixes) {
       return newLazyQuickFixes.equals(this.lazyQuickFixes()) ? this : new OffsetStore(highlighter(), fixMarker(), intentionActionDescriptors(), newLazyQuickFixes);
     }
-    @NotNull OffsetStore withIntentionDescriptorsAndFixMarker(@NotNull @Unmodifiable List<IntentionActionDescriptor> newIntentionDescriptors, @Nullable RangeMarker fixMarker) {
+    @NotNull OffsetStore withIntentionDescriptorsAndFixMarker(@NotNull @Unmodifiable List<? extends IntentionActionDescriptor> newIntentionDescriptors, @Nullable RangeMarker fixMarker) {
       return new OffsetStore(highlighter(), fixMarker, newIntentionDescriptors, lazyQuickFixes()); // fix ranges might be replaced with (albeit equal offsets) range markers
     }
     @NotNull OffsetStore withHighlighter(@NotNull RangeHighlighterEx highlighter) {
@@ -282,6 +285,7 @@ public class HighlightInfo implements Segment {
       if (future != null && future.isDone()) {
         try {
           List<IntentionActionDescriptor> coll = future.get();
+          //noinspection ConstantValue
           assert coll != null : future +"; "+future.getClass()+"; desc="+desc;
           return List.copyOf(coll);
         }
@@ -346,11 +350,11 @@ public class HighlightInfo implements Segment {
     RangeHighlighterEx myHighlighter = store.highlighter();
     if (myFixMarker == null) {
       if (myHighlighter != null && myHighlighter.isValid()) {
-        return TextRangeScalarUtil.toScalarRange(myHighlighter);
+        return TextRangeScalarUtil.toScalarRange(myHighlighter.getTextRange());
       }
     }
     else if (myFixMarker.isValid()) {
-      return TextRangeScalarUtil.toScalarRange(myFixMarker);
+      return TextRangeScalarUtil.toScalarRange(myFixMarker.getTextRange());
     }
     return fixRange;
   }
@@ -420,7 +424,9 @@ public class HighlightInfo implements Segment {
     String toolTip = this.toolTip;
     String description = this.description;
 
-    if (toolTip == null) return null;
+    if (toolTip == null) {
+      return null;
+    }
 
     String wrapped = XmlStringUtil.wrapInHtml(toolTip);
     if (description == null || !wrapped.contains(DESCRIPTION_PLACEHOLDER)) {
@@ -442,11 +448,14 @@ public class HighlightInfo implements Segment {
    */
   private static @Nullable @Tooltip String encodeTooltip(@Nullable @Tooltip String tooltip,
                                                          @Nullable @DetailedDescription String description) {
-    if (tooltip == null) return null;
+    if (tooltip == null) {
+      return null;
+    }
 
     String stripped = XmlStringUtil.stripHtml(tooltip);
-    if (description == null || description.isEmpty()) return stripped;
-
+    if (description == null || description.isEmpty()) {
+      return stripped;
+    }
     String encoded = StringUtil.replace(stripped, XmlStringUtil.escapeString(description), DESCRIPTION_PLACEHOLDER);
     if (Strings.areSameInstance(encoded, stripped)) {
       return stripped;
@@ -512,13 +521,10 @@ public class HighlightInfo implements Segment {
     if (forcedTextAttributes != null) {
       return forcedTextAttributes;
     }
-
-    EditorColorsScheme colorsScheme = getColorsScheme(editorColorsScheme);
-
+    EditorColorsScheme colorsScheme = notNullScheme(editorColorsScheme);
     if (forcedTextAttributesKey != null) {
       return colorsScheme.getAttributes(forcedTextAttributesKey);
     }
-
     return getAttributesByType(element, type, colorsScheme);
   }
 
@@ -527,19 +533,20 @@ public class HighlightInfo implements Segment {
                                                    @NotNull TextAttributesScheme colorsScheme) {
     SeverityRegistrar severityRegistrar = SeverityRegistrar.getSeverityRegistrar(element != null ? element.getProject() : null);
     TextAttributes textAttributes = severityRegistrar.getTextAttributesBySeverity(type.getSeverity(element));
-    if (textAttributes != null) return textAttributes;
+    if (textAttributes != null) {
+      return textAttributes;
+    }
     TextAttributesKey key = type.getAttributesKey();
     return colorsScheme.getAttributes(key);
   }
 
   @Nullable
   final Color getErrorStripeMarkColor(@NotNull PsiElement element,
-                                @Nullable("when null, the global scheme will be used") EditorColorsScheme colorsScheme) {
+                                      @Nullable("when null, the global scheme will be used") EditorColorsScheme colorsScheme) {
     if (forcedTextAttributes != null) {
       return forcedTextAttributes.getErrorStripeColor();
     }
-
-    EditorColorsScheme scheme = getColorsScheme(colorsScheme);
+    EditorColorsScheme scheme = notNullScheme(colorsScheme);
     if (forcedTextAttributesKey != null) {
       TextAttributes forcedTextAttributes = scheme.getAttributes(forcedTextAttributesKey);
       if (forcedTextAttributes != null) {
@@ -573,22 +580,20 @@ public class HighlightInfo implements Segment {
     return attributes == null ? null : attributes.getErrorStripeColor();
   }
 
-  private static @NotNull EditorColorsScheme getColorsScheme(@Nullable EditorColorsScheme customScheme) {
+  private static @NotNull EditorColorsScheme notNullScheme(@Nullable EditorColorsScheme customScheme) {
     return customScheme != null ? customScheme : EditorColorsManager.getInstance().getGlobalScheme();
   }
 
   @Override
   public boolean equals(Object obj) {
-    if (obj == this) return true;
-    if (!(obj instanceof HighlightInfo info)) return false;
-
-    return equalsByActualOffset(info);
+    return obj == this || obj instanceof HighlightInfo info && equalsByActualOffset(info);
   }
 
   @ApiStatus.Internal
   public boolean equalsByActualOffset(@NotNull HighlightInfo info) {
-    if (info == this) return true;
-
+    if (info == this) {
+      return true;
+    }
     return info.getActualStartOffset() == getActualStartOffset() &&
            info.getActualEndOffset() == getActualEndOffset() &&
            attributesEqual(info);
@@ -610,7 +615,7 @@ public class HighlightInfo implements Segment {
   }
 
   @ApiStatus.Internal
-  public final @NonNls String toStringCompact(boolean showFullQualifiedClassNames) {
+  public final @NonNls String toStringCompact(boolean showFullQualifiedClassNames, boolean showIntentionDescriptors) {
     String s = "HighlightInfo(" + getStartOffset() + "," + getEndOffset() + ")";
     if (isFileLevelAnnotation()) {
       s+=" (file level)";
@@ -621,7 +626,7 @@ public class HighlightInfo implements Segment {
     OffsetStore store = offsetStore;
     RangeHighlighterEx highlighter = store.highlighter();
     if (highlighter != null) {
-      s += "; text='" + StringUtil.first(getText(), 40, true) + "'; highlighter: (" + highlighter.getStartOffset()+","+highlighter.getEndOffset()+")";
+      s += "; text='" + StringUtil.first(getText(), 40, true) + "'; highlighter: " + highlighter.debugOffsets();
       if (!highlighter.isValid()) {
         s+= " (invalid)";
       }
@@ -630,10 +635,14 @@ public class HighlightInfo implements Segment {
       s += ", description='" + getDescription() + "'";
     }
     s += "; severity=" + getSeverity();
-    List<IntentionActionDescriptor> descriptors = getIntentionActionDescriptors(store);
-    if (!descriptors.isEmpty()) {
-      s += "; quickFixes: " + StringUtil.join(descriptors, ", ");
+
+    if (showIntentionDescriptors) {
+      List<IntentionActionDescriptor> descriptors = getIntentionActionDescriptors(store);
+      if (!descriptors.isEmpty()) {
+        s += "; quickFixes: " + StringUtil.join(descriptors, ", ");
+      }
     }
+
     if (gutterIconRenderer != null) {
       s += "; gutter: " + gutterIconRenderer;
     }
@@ -655,7 +664,7 @@ public class HighlightInfo implements Segment {
 
   @Override
   public @NonNls String toString() {
-    return toStringCompact(true);
+    return toStringCompact(true, true);
   }
 
   public static @NotNull Builder newHighlightInfo(@NotNull HighlightInfoType type) {
@@ -700,12 +709,6 @@ public class HighlightInfo implements Segment {
     @NotNull Builder gutterIconRenderer(@NotNull GutterIconRenderer gutterIconRenderer);
 
     @NotNull Builder problemGroup(@NotNull ProblemGroup problemGroup);
-
-    /**
-     * @deprecated Do not use. Inspections set this id automatically when run
-     */
-    @Deprecated(forRemoval = true)
-    @NotNull Builder inspectionToolId(@NotNull String inspectionTool);
 
     // only one allowed
     @NotNull Builder description(@DetailedDescription @NotNull String description);
@@ -842,13 +845,15 @@ public class HighlightInfo implements Segment {
     return toHighlightInfoType(type, severity);
   }
 
-  private static @NotNull HighlightInfoType toHighlightInfoType(ProblemHighlightType problemHighlightType, @NotNull HighlightSeverity severity) {
-    if (problemHighlightType == ProblemHighlightType.LIKE_UNUSED_SYMBOL) return HighlightInfoType.UNUSED_SYMBOL;
-    if (problemHighlightType == ProblemHighlightType.LIKE_UNKNOWN_SYMBOL) return HighlightInfoType.WRONG_REF;
-    if (problemHighlightType == ProblemHighlightType.LIKE_DEPRECATED) return HighlightInfoType.DEPRECATED;
-    if (problemHighlightType == ProblemHighlightType.LIKE_MARKED_FOR_REMOVAL) return HighlightInfoType.MARKED_FOR_REMOVAL;
-    if (problemHighlightType == ProblemHighlightType.POSSIBLE_PROBLEM) return HighlightInfoType.POSSIBLE_PROBLEM;
-    return convertSeverity(severity);
+  private static @NotNull HighlightInfoType toHighlightInfoType(@NotNull ProblemHighlightType problemHighlightType, @NotNull HighlightSeverity severity) {
+    return switch (problemHighlightType) {
+      case LIKE_UNUSED_SYMBOL -> HighlightInfoType.UNUSED_SYMBOL;
+      case LIKE_UNKNOWN_SYMBOL -> HighlightInfoType.WRONG_REF;
+      case LIKE_DEPRECATED -> HighlightInfoType.DEPRECATED;
+      case LIKE_MARKED_FOR_REMOVAL -> HighlightInfoType.MARKED_FOR_REMOVAL;
+      case POSSIBLE_PROBLEM -> HighlightInfoType.POSSIBLE_PROBLEM;
+      default -> convertSeverity(severity);
+    };
   }
 
   public static @NotNull HighlightInfoType convertSeverity(@NotNull HighlightSeverity severity) {
@@ -908,7 +913,7 @@ public class HighlightInfo implements Segment {
     /**
      * @deprecated use {@link #IntentionActionDescriptor(IntentionAction, List, String, Icon, HighlightDisplayKey, ProblemGroup, HighlightSeverity, Segment)}
      */
-    @Deprecated
+    @Deprecated(forRemoval = true)
     public IntentionActionDescriptor(@NotNull IntentionAction action,
                                      @Nullable @Unmodifiable List<? extends IntentionAction> options,
                                      @Nullable @Nls String displayName,
@@ -946,7 +951,9 @@ public class HighlightInfo implements Segment {
       }
 
       String displayName = HighlightDisplayKey.getDisplayNameByKey(myKey);
-      if (displayName == null) return null;
+      if (displayName == null) {
+        return null;
+      }
       return new IntentionActionDescriptor(new EmptyIntentionAction(displayName), myOptions, myDisplayName, myIcon,
                                            myKey, myProblemGroup, mySeverity, myFixRange);
     }
@@ -1097,7 +1104,7 @@ public class HighlightInfo implements Segment {
     public String toString() {
       String name = getAction().getFamilyName();
       return "IntentionActionDescriptor: '" + name + "' (" + ReportingClassSubstitutor.getClassToReport(getAction()) + ")"
-        + (myFixRange == null || myFixRange.getStartOffset() == myFixRange.getEndOffset() ? "" : "; fixRange: ("+myFixRange.getStartOffset()+", "+ myFixRange.getEndOffset()+": "+myFixRange.getClass()+")");
+        + (myFixRange == null || myFixRange.getStartOffset() == myFixRange.getEndOffset() ? "" : "; fixRange: "+TextRange.create(myFixRange)+": "+myFixRange.getClass()+")");
     }
 
     public @Nullable Icon getIcon() {
@@ -1146,13 +1153,17 @@ public class HighlightInfo implements Segment {
   }
 
   public final @NotNull String getText() {
-    if (isFileLevelAnnotation()) return "";
+    if (isFileLevelAnnotation()) {
+      return "";
+    }
     RangeHighlighterEx highlighter = offsetStore.highlighter();
     if (highlighter == null) {
-      throw new RuntimeException("info not applied yet");
+      return "";
     }
     TextRange range = highlighter.getTextRange();
-    if (!highlighter.isValid()) return "";
+    if (!highlighter.isValid()) {
+      return "";
+    }
     String text = highlighter.getDocument().getText();
     return text.substring(Math.min(range.getStartOffset(), text.length()), Math.min(range.getEndOffset(), text.length()));
   }
@@ -1171,7 +1182,7 @@ public class HighlightInfo implements Segment {
   }
 
   @ApiStatus.Internal
-  final void registerFixes(@NotNull List<@NotNull IntentionActionDescriptor> fixes, @Nullable Document document) {
+  final void registerFixes(@NotNull List<? extends @NotNull IntentionActionDescriptor> fixes, @Nullable Document document) {
     if (fixes.isEmpty()) {
       return;
     }
@@ -1210,7 +1221,7 @@ public class HighlightInfo implements Segment {
       RangeMarker fixMarker = oldStore.fixMarker();
       document = fixMarker != null ? fixMarker.getDocument() : highlighter != null ? highlighter.getDocument() : null;
     }
-    List<IntentionActionDescriptor> newDescriptors;
+    List<? extends IntentionActionDescriptor> newDescriptors;
     RangeMarker newFixMarker;
     if (document == null) {
       newDescriptors = oldStore.intentionActionDescriptors();
@@ -1220,7 +1231,7 @@ public class HighlightInfo implements Segment {
       newFixRange = TextRangeScalarUtil.coerceRange(newFixRange, 0, document.getTextLength());
       Long2ObjectMap<RangeMarker> cache = getRangeMarkerCache(oldStore);
       newDescriptors = toRangeMarkerFixRanges(oldStore.intentionActionDescriptors(), document, cache, newFixRange);
-      long highlighterRange = highlighter != null && highlighter.isValid() ? TextRangeScalarUtil.toScalarRange(highlighter) : newFixRange;
+      long highlighterRange = highlighter != null && highlighter.isValid() ? TextRangeScalarUtil.toScalarRange(highlighter.getTextRange()) : newFixRange;
       newFixMarker = updateFixMarker(document, cache, newFixRange, highlighterRange);
     }
     return oldStore.withIntentionDescriptorsAndFixMarker(newDescriptors, newFixMarker);
@@ -1232,13 +1243,13 @@ public class HighlightInfo implements Segment {
     for (IntentionActionDescriptor pair : getIntentionActionDescriptors(store)) {
       Segment fixRange = pair.myFixRange;
       if (fixRange instanceof RangeMarker marker && marker.isValid()) {
-        cache.put(TextRangeScalarUtil.toScalarRange(marker), marker);
+        cache.put(TextRangeScalarUtil.toScalarRange(marker.getTextRange()), marker);
         break;
       }
     }
     RangeHighlighterEx highlighter = store.highlighter();
     if (highlighter != null && highlighter.isValid()) {
-      cache.putIfAbsent(TextRangeScalarUtil.toScalarRange(highlighter), highlighter);
+      cache.putIfAbsent(TextRangeScalarUtil.toScalarRange(highlighter.getTextRange()), highlighter);
     }
     return cache;
   }
@@ -1262,20 +1273,22 @@ public class HighlightInfo implements Segment {
   public final boolean containsOffset(int offset, boolean includeFixRange) {
     OffsetStore store = offsetStore;
     RangeHighlighterEx highlighter = store.highlighter();
-    if (highlighter == null || !highlighter.isValid()) return false;
-    int startOffset = highlighter.getStartOffset();
-    int endOffset = highlighter.getEndOffset();
-    if (startOffset <= offset && offset <= endOffset) {
+    if (highlighter == null || !highlighter.isValid()) {
+      return false;
+    }
+    if (highlighter.containsInclusive(offset)) {
       return true;
     }
-    if (!includeFixRange) return false;
+    if (!includeFixRange) {
+      return false;
+    }
     long fixRange = getFixTextRangeScalar(store);
     return TextRangeScalarUtil.containsOffset(fixRange, offset);
   }
   private static @NotNull RangeMarker getOrCreate(@NotNull Document document,
                                                   @NotNull Long2ObjectMap<RangeMarker> range2markerCache,
                                                   long textRange) {
-    return range2markerCache.computeIfAbsent(textRange, __ -> document.createRangeMarker(TextRangeScalarUtil.startOffset(textRange),
+    return range2markerCache.computeIfAbsent(textRange, _ -> document.createRangeMarker(TextRangeScalarUtil.startOffset(textRange),
                                                                                          TextRangeScalarUtil.endOffset(textRange)));
   }
 
@@ -1291,16 +1304,16 @@ public class HighlightInfo implements Segment {
     updateOffsetStore(oldStore -> {
       long fixTextRange = TextRangeScalarUtil.coerceRange(getFixTextRangeScalar(oldStore), 0, document.getTextLength());
       RangeMarker newFixMarker = updateFixMarker(document, range2markerCache, fixTextRange, finalHighlighterRange);
-      List<IntentionActionDescriptor> newDescriptors = toRangeMarkerFixRanges(getIntentionActionDescriptors(oldStore), document, range2markerCache, fixTextRange);
+      List<? extends IntentionActionDescriptor> newDescriptors = toRangeMarkerFixRanges(getIntentionActionDescriptors(oldStore), document, range2markerCache, fixTextRange);
       return oldStore.withIntentionDescriptorsAndFixMarker(newDescriptors, newFixMarker);
     });
   }
 
   @Contract(pure = true)
-  private static @NotNull @Unmodifiable List<IntentionActionDescriptor> toRangeMarkerFixRanges(@NotNull List<IntentionActionDescriptor> descriptors,
-                                                                                               @NotNull Document document,
-                                                                                               @NotNull Long2ObjectMap<RangeMarker> range2markerCache,
-                                                                                               long fixTextRange) {
+  private static @NotNull @Unmodifiable List<? extends IntentionActionDescriptor> toRangeMarkerFixRanges(@NotNull List<? extends IntentionActionDescriptor> descriptors,
+                                                                                                         @NotNull Document document,
+                                                                                                         @NotNull Long2ObjectMap<RangeMarker> range2markerCache,
+                                                                                                         long fixTextRange) {
     return ContainerUtil.map(descriptors, descriptor -> descriptor.withRangeMarkerFixRange(document, range2markerCache, fixTextRange));
   }
 
@@ -1359,7 +1372,7 @@ public class HighlightInfo implements Segment {
     synchronized (HighlightInfoUpdater.getInstance(project)) {
       // derive composite's offsets from an info with tooltip, if present
       HighlightInfo anchorInfo = ContainerUtil.find(infos, info -> info.getToolTip() != null && info.getHighlighter() != null);
-      if (anchorInfo == null) anchorInfo = infos.get(0);
+      if (anchorInfo == null) anchorInfo = infos.getFirst();
       Builder builder = anchorInfo.copy(false);
       String compositeDescription = createCompositeDescription(infos);
       String compositeTooltip = createCompositeTooltip(infos);
@@ -1371,7 +1384,7 @@ public class HighlightInfo implements Segment {
       }
       HighlightInfo newInfo = builder.createUnconditionally();
       OffsetStore oldStore = newInfo.offsetStore;
-      List<IntentionActionDescriptor> newDescriptors =
+      List<? extends IntentionActionDescriptor> newDescriptors =
         ContainerUtil.concat(ContainerUtil.map(infos, i -> ((HighlightInfo)i).offsetStore.intentionActionDescriptors()));
       OffsetStore newStore = oldStore.withIntentionDescriptorsAndFixMarker(newDescriptors, oldStore.fixMarker());
       if (anchorInfo.getHighlighter() != null) {
@@ -1439,14 +1452,16 @@ public class HighlightInfo implements Segment {
     }
   }
 
+  @RequiresBackgroundThread
+  @RequiresReadLock
   final void computeQuickFixesSynchronously(@NotNull Project project, @NotNull Document document) throws ExecutionException, InterruptedException {
-    ApplicationManager.getApplication().assertIsNonDispatchThread();
-    ApplicationManager.getApplication().assertReadAccessAllowed();
+    ThreadingAssertions.assertBackgroundThread();
+    ThreadingAssertions.assertReadAccess();
 
     // store results of computation here to avoid re-computing when the CAS fails, because it can be extremely expensive
     Map<Consumer<? super QuickFixActionRegistrar>, @NotNull List<IntentionActionDescriptor>> computerToResult = new IdentityHashMap<>();
     updateOffsetStore(oldStore -> {
-      List<LazyFixDescription> newLazies = ContainerUtil.map(oldStore.lazyQuickFixes(), desc -> {
+      List<? extends LazyFixDescription> newLazies = ContainerUtil.map(oldStore.lazyQuickFixes(), desc -> {
         Future<List<IntentionActionDescriptor>> future = desc.future();
         if (future != null && future.isDone()) {
           return desc;
@@ -1454,8 +1469,7 @@ public class HighlightInfo implements Segment {
         Consumer<? super QuickFixActionRegistrar> computer = desc.fixesComputer();
         // recompute only if necessary
         List<IntentionActionDescriptor> result =
-          computerToResult.computeIfAbsent(computer, __ -> doComputeLazyQuickFixes(document, project, desc.psiModificationStamp(), computer));
-        assert result != null;
+          computerToResult.computeIfAbsent(computer, _ -> doComputeLazyQuickFixes(document, project, desc.psiModificationStamp(), computer));
         future = CompletableFuture.completedFuture(result);
         return new LazyFixDescription(desc.fixesComputer(), desc.psiModificationStamp(), future);
       });
@@ -1499,7 +1513,7 @@ public class HighlightInfo implements Segment {
     return lazyDescriptors;
   }
 
-  private static void assertIntentionActionDescriptorsAreRangeMarkerBased(@NotNull List<IntentionActionDescriptor> descriptors) {
+  private static void assertIntentionActionDescriptorsAreRangeMarkerBased(@NotNull List<? extends IntentionActionDescriptor> descriptors) {
     for (IntentionActionDescriptor descriptor : descriptors) {
       assert descriptor.myFixRange  == null || descriptor.myFixRange instanceof RangeMarker : descriptor +"; descriptors:"+descriptors;
     }
@@ -1509,13 +1523,17 @@ public class HighlightInfo implements Segment {
    * Starts computing lazy quick fixes in the background.
    * The result will be stored back in {@link OffsetStore#lazyQuickFixes} inside {@link LazyFixDescription#future}
    */
+  @RequiresBackgroundThread
+  @RequiresReadLock
   final void startComputeQuickFixes(@NotNull Document document, @NotNull Project project) {
     assertIntentionActionDescriptorsAreRangeMarkerBased(getIntentionActionDescriptors(offsetStore));
-    ApplicationManager.getApplication().assertIsNonDispatchThread();
-    ApplicationManager.getApplication().assertReadAccessAllowed();
+    ThreadingAssertions.assertBackgroundThread();
+    ThreadingAssertions.assertReadAccess();
     AtomicReference<ProgressIndicator> progressIndicator = new AtomicReference<>(new DaemonProgressIndicator());
     updateOffsetStore(oldStore -> {
-      progressIndicator.get().cancel(); // cancel the previous computations started before but not stored in the "future" field because the CAS failed
+      if (!progressIndicator.get().isCanceled()) {
+        progressIndicator.get().cancel(); // cancel the previous computations started before but not stored in the "future" field because the CAS failed
+      }
       progressIndicator.set(new DaemonProgressIndicator());
       if (oldStore == TOMB) {
         return oldStore;
@@ -1535,8 +1553,8 @@ public class HighlightInfo implements Segment {
 
   final void copyComputedLazyFixesTo(@NotNull HighlightInfo newInfo, @NotNull Document document) {
     newInfo.updateOffsetStore(store -> {
-      List<LazyFixDescription> oldFixes = this.offsetStore.lazyQuickFixes();
-      List<LazyFixDescription> newFixes = store.lazyQuickFixes();
+      List<? extends LazyFixDescription> oldFixes = this.offsetStore.lazyQuickFixes();
+      List<? extends LazyFixDescription> newFixes = store.lazyQuickFixes();
       if (newFixes.size() == oldFixes.size() && psiModificationStampIsTheSame(newFixes, oldFixes)) {
         OffsetStore newO = store.withLazyQuickFixes(oldFixes);
         return updateFields(newO, document);
@@ -1545,8 +1563,8 @@ public class HighlightInfo implements Segment {
     });
   }
 
-  private static boolean psiModificationStampIsTheSame(@NotNull @Unmodifiable List<LazyFixDescription> list1,
-                                                       @NotNull @Unmodifiable List<LazyFixDescription> list2) {
+  private static boolean psiModificationStampIsTheSame(@NotNull @Unmodifiable List<? extends LazyFixDescription> list1,
+                                                       @NotNull @Unmodifiable List<? extends LazyFixDescription> list2) {
     for (int i = 0; i < list1.size(); i++) {
       LazyFixDescription fix1 = list1.get(i);
       LazyFixDescription fix2 = list2.get(i);
