@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.ui.impl;
 
 import com.intellij.concurrency.ThreadContext;
@@ -40,6 +40,7 @@ import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.openapi.util.WindowStateService;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.wm.IdeFocusManager;
+import com.intellij.openapi.wm.IdeFrame;
 import com.intellij.openapi.wm.WindowManager;
 import com.intellij.openapi.wm.ex.WindowManagerEx;
 import com.intellij.openapi.wm.impl.IdeFrameDecorator;
@@ -51,7 +52,7 @@ import com.intellij.openapi.wm.impl.customFrameDecorations.header.CustomHeader;
 import com.intellij.platform.ide.bootstrap.SplashManagerKt;
 import com.intellij.platform.locking.impl.IntelliJLockingUtil;
 import com.intellij.reference.SoftReference;
-import com.intellij.ui.AppUIUtilKt;
+import com.intellij.ui.AppUIUtil;
 import com.intellij.ui.ComponentUtil;
 import com.intellij.ui.DisposableWindow;
 import com.intellij.ui.ScreenUtil;
@@ -80,8 +81,6 @@ import kotlin.Pair;
 import kotlin.Unit;
 import kotlin.coroutines.EmptyCoroutineContext;
 import kotlin.jvm.functions.Function0;
-import kotlinx.coroutines.EventLoop;
-import kotlinx.coroutines.ThreadLocalEventLoop;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -103,6 +102,7 @@ import java.awt.Dimension;
 import java.awt.EventQueue;
 import java.awt.Graphics;
 import java.awt.GraphicsEnvironment;
+import java.awt.Insets;
 import java.awt.KeyboardFocusManager;
 import java.awt.Point;
 import java.awt.Rectangle;
@@ -158,11 +158,21 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
           KeyboardFocusManager.getCurrentKeyboardFocusManager().getActiveWindow());
         if (project == null && curWindow != null) {
           project = ProjectUtil.getProjectForWindow(curWindow);
+          if (project == null) {
+            project = CommonDataKeys.PROJECT.getData(DataManager.getInstance().getDataContext(curWindow));
+          }
         }
 
         myProject = project;
 
         window = windowManager.suggestParentWindow(project);
+        // When the focused window is a non-IdeFrame window (e.g., a Lux host dialog in remote dev)
+        // and suggestParentWindow returned the IDE frame, prefer the focused window as parent.
+        // This ensures child dialogs appear over the actual focused window rather than the main frame.
+        if (curWindow != null && !(curWindow instanceof IdeFrame) && curWindow.isShowing()
+            && (window == null || window instanceof IdeFrame)) {
+          window = curWindow;
+        }
         if (window == null) {
           if (curWindow instanceof IdeFrameImpl) {
             window = curWindow;
@@ -296,8 +306,9 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
   }
 
   @Override
+  @SuppressWarnings("SwingIsEventDispatchThread")
   protected void dispose() {
-    LOG.assertTrue(EventQueue.isDispatchThread(), "Access is allowed from event dispatch thread only");
+    LOG.assertTrue(EventQueue.isDispatchThread(), "Access is allowed from the event dispatch thread only");
     for (Runnable runnable : myDisposeActions) {
       runnable.run();
     }
@@ -376,7 +387,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
 
   @Override
   public void setAppIcons() {
-    AppUIUtilKt.updateAppWindowIcon(getWindow());
+    AppUIUtil.updateAppWindowIcon(getWindow());
   }
 
   @Override
@@ -454,8 +465,9 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
   }
 
   @Override
+  @SuppressWarnings("SwingIsEventDispatchThread")
   public CompletableFuture<?> show() {
-    LOG.assertTrue(EventQueue.isDispatchThread(), "Access is allowed from event dispatch thread only");
+    LOG.assertTrue(EventQueue.isDispatchThread(), "Access is allowed from the event dispatch thread only");
 
     AnCancelAction anCancelAction = new AnCancelAction();
     JRootPane rootPane = getRootPane();
@@ -498,7 +510,6 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
 
     // ProgressWindow starts a modality state itself
     @SuppressWarnings("deprecation") boolean changeModalityState = appStarted && myDialog.isModal() && !isProgressDialog();
-    Project project = myProject;
 
     Consumer<Runnable> lockContextWrapper;
     Function0<Unit> lockCleanup;
@@ -603,14 +614,15 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
   }
 
   @RequiresEdt
+  @SuppressWarnings({"KotlinInternalInJava", "UnnecessaryFullyQualifiedName"})
   private static AccessToken resetCoroutinesEventLoop() {
-    EventLoop currentEventLoop = ThreadLocalEventLoop.INSTANCE.currentOrNull$kotlinx_coroutines_core();
-    ThreadLocalEventLoop.INSTANCE.resetEventLoop$kotlinx_coroutines_core();
+    kotlinx.coroutines.EventLoop currentEventLoop = kotlinx.coroutines.ThreadLocalEventLoop.INSTANCE.currentOrNull$kotlinx_coroutines_core();
+    kotlinx.coroutines.ThreadLocalEventLoop.INSTANCE.resetEventLoop$kotlinx_coroutines_core();
     return new AccessToken() {
       @Override
       public void finish() {
         if (currentEventLoop != null) {
-          ThreadLocalEventLoop.INSTANCE.resetEventLoop$kotlinx_coroutines_core();
+          kotlinx.coroutines.ThreadLocalEventLoop.INSTANCE.resetEventLoop$kotlinx_coroutines_core();
         }
       }
     };
@@ -1038,7 +1050,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
         size.width = Math.max(size.width, tableSize.width);
         size.height = Math.max(size.height, tableSize.height + size.height - table.getParent().getHeight());
       }
-      size.width = Math.min(1000, Math.max(600, size.width));
+      size.width = Math.clamp(size.width, 600, 1000);
       size.height = Math.min(800, size.height);
       return size;
     }
@@ -1250,6 +1262,7 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
       private final boolean myGlassPaneIsSet;
 
       private Dimension myLastMinimumSize;
+      private Insets myLastWindowInsets;
 
       private DialogRootPane() {
         setGlassPane(new IdeGlassPaneImpl(this));
@@ -1277,15 +1290,21 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
         if (wrapper != null && wrapper.isAutoAdjustable()) {
           Window window = wrapper.getWindow();
           if (window != null) {
+            Insets windowInsets = window.getInsets();
+            var windowInsetsChanged = !(Objects.equals(myLastWindowInsets, windowInsets));
+            if (windowInsetsChanged) {
+              myLastWindowInsets = windowInsets == null ? null : (Insets)windowInsets.clone();
+            }
+
             Dimension size = getMinimumSize();
-            if (!(Objects.equals(size, myLastMinimumSize))) {
-              // update window minimum size only if root pane minimum size is changed
+            if (!(Objects.equals(size, myLastMinimumSize)) || windowInsetsChanged) {
+              // update window minimum size only if root pane minimum size or window insets is changed
               if (size == null) {
                 myLastMinimumSize = null;
               }
               else {
                 myLastMinimumSize = new Dimension(size);
-                JBInsets.addTo(size, window.getInsets());
+                JBInsets.addTo(size, windowInsets);
                 Rectangle screen = ScreenUtil.getScreenRectangle(window);
                 if (size.width > screen.width || size.height > screen.height) {
                   Application application = ApplicationManager.getApplication();
@@ -1365,5 +1384,4 @@ public class DialogWrapperPeerImpl extends DialogWrapperPeer {
   public void setAutoRequestFocus(boolean b) {
     UIUtil.setAutoRequestFocus((JDialog)myDialog, b);
   }
-  
 }
